test/subjects/invalid/bad_hint_object.php
<?php

	function f (bool $x = true) // { Error: Default value for parameters with a class type hint can only be NULL }
	{
	}
?>
